--- a/jboss-seam-gen/pom.xml
+++ b/jboss-seam-gen/pom.xml
@@ -110,6 +110,12 @@
                 <artifactId>richfaces-a4j</artifactId>
                 <scope>runtime</scope>                
             </dependency>
+	<dependency>
+		<groupId>org.primefaces</groupId>
+		<artifactId>primefaces</artifactId>
+		<version>6.0</version>
+	</dependency>
+            
       
       <dependency>
          <groupId>org.eclipse.core</groupId>
