--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -89,7 +89,7 @@
 			<dependency>
                 <groupId>org.jboss.spec.javax.faces</groupId>
                 <artifactId>jboss-jsf-api_2.2_spec</artifactId>
-                <version>2.2.13</version>
+                <version>${version.org.jboss.spec.javax.faces}</version>
                 <scope>provided</scope>
             </dependency>
 
