--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -386,7 +386,7 @@
 			<dependency>
 				<groupId>com.github.albfernandez</groupId>
 				<artifactId>jbpm-jpdl</artifactId>
-				<version>3.2.10-1-SP3_seam2_hibernate5</version>
+				<version>3.2.11.ayg</version>
 				<exclusions>
 					<exclusion>
 						<groupId>org.hibernate</groupId>
