--- a/jboss-seam-flex/pom.xml
+++ b/jboss-seam-flex/pom.xml
@@ -81,7 +81,8 @@
                                 <configuration>
                                     <excludeGroupIds>org.jboss.seam</excludeGroupIds>
                                     <excludeClassifiers>sources, project, distribution</excludeClassifiers>
-                                    <outputDirectory>../jar-dependencies</outputDirectory>                                    
+                                    <outputDirectory>../jar-dependencies</outputDirectory>   
+                                    <stripVersion>true</stripVersion>                                 
                                     <type>jar</type>
                                     <transitive>true</transitive>
                                 </configuration>
