--- a/jboss-seam-gen/pom.xml
+++ b/jboss-seam-gen/pom.xml
@@ -119,7 +119,16 @@
 		<artifactId>primefaces</artifactId>
 		<version>6.1</version>
 	</dependency>
-            
+            <dependency>
+                <groupId>org.primefaces.themes</groupId>
+                <artifactId>bootstrap</artifactId>
+                <version>1.0.10</version>
+            </dependency>
+            <dependency>
+                <groupId>net.bootsfaces</groupId>
+                <artifactId>bootsfaces</artifactId>
+                <version>1.1.2</version>
+            </dependency>
       
       <dependency>
          <groupId>org.eclipse.core</groupId>
