--- a/pom.xml
+++ b/pom.xml
@@ -630,6 +630,20 @@
 
       <repositories>
         <repository>
+          <id>repository-primefaces-org</id>
+          <name>Primefaces Repository</name>
+          <url>http://repository.primefaces.org/</url>
+          <layout>default</layout>
+          <releases>
+            <enabled>true</enabled>
+            <updatePolicy>never</updatePolicy>
+          </releases>
+          <snapshots>
+            <enabled>true</enabled>
+            <updatePolicy>never</updatePolicy>
+          </snapshots>
+        </repository>
+        <repository>
           <id>jboss-public-repository-group</id>
           <name>JBoss Public Maven Repository Group</name>
           <url>https://repository.jboss.org/nexus/content/groups/public/</url>
